--- a/ga_book-ciriegola.html
+++ b/ga_book-ciriegola.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BG6SYWV817"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-183980834-6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-BG6SYWV817');
+  gtag('config', 'UA-183980834-6');
 </script>
